<resources>
    <string name="app_name">helloAndroid</string>
    <string name="SenderDetails">SENDER\nDETAILS</string>
    <string name="Email">Email</string>
    <string name="FullName">Full Name</string>
    <string name="ContactInformation">Contact\nInformation</string>
    <string name="ContactInfo">Contact\nInfo</string>
    <string name="Country">Country</string>
    <string name="ADDRESS">ADDRESS</string>
    <string name="NEXT">NEXT</string>
    <string name="ReceiverDetails">RECEIVER\nDETAILS</string>
    <string name="ReviewInfo">Review Info</string>
    <string name="Name">Name</string>
</resources>