<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige"
    tools:context=".SenderActivity">

    <TextView
        android:id="@+id/sender_header"

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="18dp"
        android:layout_marginTop="5dp"
        android:background="@color/red"

        android:text="@string/SenderDetails"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/sender_email_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:textColor="@color/black"
        android:layout_marginEnd="32dp"

        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:layout_marginTop="16dp"

    />

    <EditText
        android:id="@+id/sender_full_name_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/FullName"
        android:padding="17dp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"

        />

    <EditText
        android:id="@+id/sender_contact_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:textColor="@color/black"
        android:layout_marginEnd="32dp"

        android:hint="@string/ContactInformation"
        android:padding="17dp"
        android:layout_marginTop="16dp"

        />
    <EditText
        android:id="@+id/sender_country_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/Country"
        android:padding="17dp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"

        />
    <EditText
        android:id="@+id/sender_address_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:hint="@string/ADDRESS"
        android:padding="17dp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"

        />
    <Button
        android:id="@+id/sender_nextbtn"
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:background="@color/red"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"


        android:text="@string/NEXT"
        android:textColor="@color/white"

        />























</LinearLayout>