<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/review_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:id="@+id/review_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="18dp"
        android:layout_marginTop="5dp"

        android:text="@string/ReviewInfo"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TableLayout
        android:background="@color/beige"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:stretchColumns="*">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/review_info_name"
            android:text="@string/Name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="15sp"
            ></TextView>
        <TextView
            android:id="@+id/review_info_country"
            android:text="@string/Country"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"
            ></TextView>
        <TextView
            android:id="@+id/review_info_address"
            android:text="@string/ADDRESS"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"
            ></TextView>
        <TextView
            android:id="@+id/review_info_contact_info"
            android:text="@string/ContactInfo"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"

            ></TextView>
    </TableRow>
   <TableRow
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Sendername"
            android:text="@string/Name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            ></TextView>
        <TextView
            android:id="@+id/sendercountry"
            android:text="@string/Country"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            ></TextView>
        <TextView
            android:id="@+id/senderaddress"
            android:text="@string/ADDRESS"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            ></TextView>
        <TextView
            android:id="@+id/sendercontactinfo"
            android:text="@string/ContactInfo"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
>
            ></TextView>
    </TableRow>
    <TableRow>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/baseline_arrow_downward_24"></ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_upward_24" ></ImageView>
        </LinearLayout>
        </TableRow>
    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/receivername"
                android:text="@string/Name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"
                ></TextView>
            <TextView
                android:id="@+id/receivercountry"
                android:text="@string/Country"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"
                ></TextView>
            <TextView
                android:id="@+id/receiveraddress"
                android:text="@string/ADDRESS"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"
                ></TextView>
            <TextView
                android:id="@+id/receivercontactinfo"
                android:text="@string/ContactInfo"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="15sp"
                >
                ></TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:src="@drawable/baseline_add_circle_24"></com.google.android.material.floatingactionbutton.FloatingActionButton>
</FrameLayout>